# langshim

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  dist-workspace.toml  models.example.json
.github/workflows/: release.yml
src/: auth.rs  bootstrap.rs  config.rs  main.rs  models.rs  pricing.rs  router.rs  shutdown.rs  storage.rs  types.rs
src/adapter/: anthropic.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs
src/handlers/: chat_completions.rs  count_tokens.rs  error.rs  gemini.rs  messages.rs  mod.rs  responses.rs
src/handlers/execution/: chat.rs  gemini_openai_stream.rs  gemini_responses_stream.rs  messages.rs  mod.rs  passthrough_stream.rs  responses_openai_chat_stream.rs  responses_stream.rs
src/handlers/translation/: anthropic_to_responses.rs  gemini.rs  mod.rs  openai_chat_gemini.rs  openai_stream.rs  responses_openai_chat.rs  responses_to_anthropic.rs  responses_to_gemini.rs
src/services/: app_state.rs  billing.rs  mod.rs  registry.rs
