[package]
name = "langshim"
version = "0.1.0"
description = "A lightweight Rust LLM gateway with OpenAI/Anthropic-compatible APIs, protocol translation, usage tracking, and pricing."
edition = "2024"
license = "MIT"
repository = "https://github.com/langshim/langshim.git"
homepage = "https://github.com/langshim/langshim"

[dependencies]
axum = { version = "0.8", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-config = "1"
aws-sdk-bedrockruntime = "1"
async-openai = { version = "0.33", features = ["chat-completion", "_api"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower-cookies = "0.11"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
tiktoken-rs = "0.5" # For token counting approximation
regex = "1"
async-trait = "0.1"
rust_decimal = "1"
async-stream = "0.3"
base64 = "0.22.1"
tower-http = { version = "0.6.7", features = ["trace"] }
tokenizers = "0.22.2"
http-body-util = "0.1.3"
aws-smithy-runtime-api = "1.9.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
opt-level = "z"      # 优先最小体积；也可试 "s"
lto = true           # 链接时优化
codegen-units = 1    # 更利于优化体积
panic = "abort"      # 取消展开，减小二进制
strip = "symbols"    # 去符号；也可用 "debuginfo"
